# RiichiMahjongScoring

./: .gitignore  CMakeLists.txt  README.md  scoresheet_analyzer.py
src/: addresultdialog.cpp  addresultdialog.hpp  handdialog.cpp  handdialog.hpp  howtoscoredialog.cpp  howtoscoredialog.hpp  main.cpp  mainwidget.cpp  mainwidget.hpp  mainwindow.cpp  mainwindow.hpp  newgamedialog.cpp  newgamedialog.hpp  scoremodel.cpp  scoremodel.hpp  showdetaildialog.cpp  showdetaildialog.hpp  tile.cpp  tile.hpp  turnresult.cpp  turnresult.hpp  winning_hand.cpp  winning_hand.hpp
